# reconhecimento_padroes

./: Untitled.ipynb  pyproject.toml  requirements.txt  titanic_analysis.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  titanic_analysis-checkpoint.ipynb
