[project]
name = "rec-padroes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jupyter==1.*",
  "matplotlib==3.*",
  "numpy==2.*",
  "pandas==2.*",
  "seaborn==0.13.*",
  "scikit-learn",
  "scipy>=1.14.1",
  "sklearn-relief>=1.0.0b2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
