[project]
name = "rec-padroes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jupyter==1.*",
  "matplotlib==3.*",
  "numpy==2.*",
  "pandas==2.*",
  "seaborn==0.13.*",
  "scikit-learn",
  "scipy>=1.14.1",
  "ipykernel>=6.29.5",
  "jupytext>=1.16.4",
  "skrebate>=0.62",
  "mlxtend>=0.23.1",
  "mixed-naive-bayes>=0.0.3",
  "sklearn-relief>=1.0.0b2",
  "jupyterlab-vim>=4.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
